0.5.3/io.gladed.watchable/-watchable-map/index.md
[io.gladed.watchable](../index.md) / [WatchableMap](./index.md)

# WatchableMap

`class WatchableMap<K, V> : `[`MutableWatchableBase`](../-mutable-watchable-base/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>, `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>, `[`MapChange`](../-map-change/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>>, `[`ReadOnlyWatchableMap`](../-read-only-watchable-map.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`

A [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) whose contents may be watched for changes.

### Properties

| Name | Summary |
|---|---|
| [coroutineContext](coroutine-context.md) | `val coroutineContext: `[`CoroutineContext`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.coroutines/-coroutine-context/index.html) |
| [mutable](mutable.md) | `val mutable: `[`AbstractMutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-abstract-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>A map that checks and reports all change attempts. |

### Inherited Properties

| Name | Summary |
|---|---|
| [boundTo](../-mutable-watchable-base/bound-to.md) | `open val boundTo: `[`Watchable`](../-watchable/index.md)`<*, *>?`<br>The [Watchable](../-watchable/index.md) to which this object is bound, if any. |
| [changes](../-mutable-watchable-base/changes.md) | `val changes: `[`MutableList`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-list/index.html)`<`[`C`](../-mutable-watchable-base/index.md#C)`>`<br>Collects changes applied during any mutation of [mutable](../-mutable-watchable-base/mutable.md). |

### Functions

| Name | Summary |
|---|---|
| [applyBoundChange](apply-bound-change.md) | `fun `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.applyBoundChange(change: `[`MapChange`](../-map-change/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Apply all [changes](../-mutable-watchable-base/changes.md) to [M](../-mutable-watchable-base/index.md#M). |
| [readOnly](read-only.md) | `fun readOnly(): `[`ReadOnlyWatchableMap`](../-read-only-watchable-map.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Return an unmodifiable form of this [WatchableMap](./index.md). |
| [replace](replace.md) | `fun replace(newValue: `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Completely replace the contents with a new value, updating changes() as required. |
| [toImmutable](to-immutable.md) | `fun `[`MutableMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-mutable-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.toImmutable(): `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Copy a mutable [M](../-mutable-watchable-base/index.md#M) to an immutable [T](../-mutable-watchable-base/index.md#T). |
| [toInitialChange](to-initial-change.md) | `fun `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>.toInitialChange(): `[`Initial`](../-map-change/-initial/index.md)`<`[`K`](index.md#K)`, `[`V`](index.md#V)`>`<br>Given the current state T return a C representing that initial state. |
| [toString](to-string.md) | `fun toString(): `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html) |

### Inherited Functions

| Name | Summary |
|---|---|
| [bind](../-mutable-watchable-base/bind.md) | `open fun bind(source: `[`Watchable`](../-watchable/index.md)`<`[`T`](../-mutable-watchable-base/index.md#T)`, `[`C`](../-mutable-watchable-base/index.md#C)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Binds this unbound object to [source](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.T, io.gladed.watchable.MutableWatchable.C)))/source), such that when [source](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.T, io.gladed.watchable.MutableWatchable.C)))/source) changes, this object is updated to match [source](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.T, io.gladed.watchable.MutableWatchable.C)))/source) exactly. This object may not be modified while bound. When this object's [CoroutineScope](#) completes, no further binding related changes are applied. Bindings may not be circular.`open fun <T2, C2 : `[`Change`](../-change.md)`<`[`T2`](../-mutable-watchable-base/bind.md#T2)`>> bind(source: `[`Watchable`](../-watchable/index.md)`<`[`T2`](../-mutable-watchable-base/bind.md#T2)`, `[`C2`](../-mutable-watchable-base/bind.md#C2)`>, apply: `[`M`](../-mutable-watchable-base/index.md#M)`.(`[`C2`](../-mutable-watchable-base/bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Binds this unbound object to [source](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.T2, io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/source), such that for every change to [source](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.T2, io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/source), the mutable form of this object is updated with [apply](../-mutable-watchable/bind.md#io.gladed.watchable.MutableWatchable$bind(io.gladed.watchable.Watchable((io.gladed.watchable.MutableWatchable.bind.T2, io.gladed.watchable.MutableWatchable.bind.C2)), kotlin.Function2((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.bind.C2, kotlin.Unit)))/apply). This object may not be otherwise modified while bound. When this object's [CoroutineScope](#) completes, apply is no longer invoked. Bindings may not be circular. |
| [doChange](../-mutable-watchable-base/do-change.md) | `fun <U> doChange(func: () -> `[`U`](../-mutable-watchable-base/do-change.md#U)`): `[`U`](../-mutable-watchable-base/do-change.md#U)<br>Run [func](../-mutable-watchable-base/do-change.md#io.gladed.watchable.MutableWatchableBase$doChange(kotlin.Function0((io.gladed.watchable.MutableWatchableBase.doChange.U)))/func) if changes are currently allowed on [immutable](#), or throw if not. |
| [get](../-mutable-watchable-base/get.md) | `open suspend fun get(): `[`T`](../-mutable-watchable-base/index.md#T)<br>Return the current value of [T](../-watchable/index.md#T). |
| [set](../-mutable-watchable-base/set.md) | `open suspend fun set(value: `[`T`](../-mutable-watchable-base/index.md#T)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Completely replace the contents of this watchable. |
| [unbind](../-mutable-watchable-base/unbind.md) | `open fun unbind(): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Cancel any existing binding that exists for this object. |
| [use](../-mutable-watchable-base/use.md) | `open suspend fun <U> use(func: `[`M`](../-mutable-watchable-base/index.md#M)`.() -> `[`U`](../-mutable-watchable-base/use.md#U)`): `[`U`](../-mutable-watchable-base/use.md#U)<br>Suspend until [func](../-mutable-watchable/use.md#io.gladed.watchable.MutableWatchable$use(kotlin.Function1((io.gladed.watchable.MutableWatchable.M, io.gladed.watchable.MutableWatchable.use.U)))/func) can safely execute, reading and/or writing data on [M](../-mutable-watchable/index.md#M) as desired and returning the result. Note: if currently bound ([isBound](../-mutable-watchable/is-bound.md) returns true), attempts to modify [M](../-mutable-watchable/index.md#M) will throw. |
| [watchBatches](../-mutable-watchable-base/watch-batches.md) | `open fun watchBatches(scope: CoroutineScope, func: suspend (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`C`](../-mutable-watchable-base/index.md#C)`>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): Job`<br>Receive lists of changes in [func](../-watchable/watch-batches.md#io.gladed.watchable.Watchable$watchBatches(kotlinx.coroutines.CoroutineScope, kotlin.SuspendFunction1((kotlin.collections.List((io.gladed.watchable.Watchable.C)), kotlin.Unit)))/func) for all changes to this [Watchable](../-watchable/index.md) (starting with its initial state) until this [Watchable](../-watchable/index.md)'s scope completes OR [scope](../-watchable/watch-batches.md#io.gladed.watchable.Watchable$watchBatches(kotlinx.coroutines.CoroutineScope, kotlin.SuspendFunction1((kotlin.collections.List((io.gladed.watchable.Watchable.C)), kotlin.Unit)))/scope) completes OR the returned [Job](#) is cancelled. |

### Extension Functions

| Name | Summary |
|---|---|
| [watch](../kotlinx.coroutines.-coroutine-scope/watch.md) | `fun <T, C : `[`Change`](../-change.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watch.md#T)`>> CoroutineScope.watch(watchable: `[`Watchable`](../-watchable/index.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watch.md#T)`, `[`C`](../kotlinx.coroutines.-coroutine-scope/watch.md#C)`>, func: (`[`C`](../kotlinx.coroutines.-coroutine-scope/watch.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): Job` |
| [watchBatches](../kotlinx.coroutines.-coroutine-scope/watch-batches.md) | `fun <T, C : `[`Change`](../-change.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watch-batches.md#T)`>> CoroutineScope.watchBatches(watchable: `[`Watchable`](../-watchable/index.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watch-batches.md#T)`, `[`C`](../kotlinx.coroutines.-coroutine-scope/watch-batches.md#C)`>, func: suspend (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`C`](../kotlinx.coroutines.-coroutine-scope/watch-batches.md#C)`>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): Job` |
| [watchableListOf](../kotlinx.coroutines.-coroutine-scope/watchable-list-of.md) | `fun <T : `[`Any`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html)`> CoroutineScope.watchableListOf(vararg values: `[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-list-of.md#T)`): `[`WatchableList`](../-watchable-list/index.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-list-of.md#T)`>`<br>Return a new [WatchableList](../-watchable-list/index.md) containing [values](../kotlinx.coroutines.-coroutine-scope/watchable-list-of.md#io.gladed.watchable$watchableListOf(kotlinx.coroutines.CoroutineScope, kotlin.Array((io.gladed.watchable.watchableListOf.T)))/values), living on this [CoroutineScope](#). |
| [watchableMapOf](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md) | `fun <K, V> CoroutineScope.watchableMapOf(vararg values: `[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`K`](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md#K)`, `[`V`](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md#V)`>): `[`WatchableMap`](./index.md)`<`[`K`](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md#K)`, `[`V`](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md#V)`>`<br>Return a new [WatchableMap](./index.md) containing a map of [values](../kotlinx.coroutines.-coroutine-scope/watchable-map-of.md#io.gladed.watchable$watchableMapOf(kotlinx.coroutines.CoroutineScope, kotlin.Array((kotlin.Pair((io.gladed.watchable.watchableMapOf.K, io.gladed.watchable.watchableMapOf.V)))))/values), living on this [CoroutineScope](#). |
| [watchableSetOf](../kotlinx.coroutines.-coroutine-scope/watchable-set-of.md) | `fun <T : `[`Any`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html)`> CoroutineScope.watchableSetOf(vararg values: `[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-set-of.md#T)`): `[`WatchableSet`](../-watchable-set/index.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-set-of.md#T)`>`<br>Return a new [WatchableSet](../-watchable-set/index.md) containing [values](../kotlinx.coroutines.-coroutine-scope/watchable-set-of.md#io.gladed.watchable$watchableSetOf(kotlinx.coroutines.CoroutineScope, kotlin.Array((io.gladed.watchable.watchableSetOf.T)))/values), living on this [CoroutineScope](#). |
| [watchableValueOf](../kotlinx.coroutines.-coroutine-scope/watchable-value-of.md) | `fun <T : `[`Any`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html)`> CoroutineScope.watchableValueOf(value: `[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-value-of.md#T)`): `[`WatchableValue`](../-watchable-value/index.md)`<`[`T`](../kotlinx.coroutines.-coroutine-scope/watchable-value-of.md#T)`>`<br>Return a new [WatchableValue](../-watchable-value/index.md) wrapping [value](../kotlinx.coroutines.-coroutine-scope/watchable-value-of.md#io.gladed.watchable$watchableValueOf(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.watchableValueOf.T)/value), living on this [CoroutineScope](#). |
